Add _id into index fields as well