@@ -49,6 +49,7 @@ public class ShredderTest {
       assertThat(doc.id()).isEqualTo(DocumentId.fromString("abc"));
       List<JsonPath> expPaths =
           Arrays.asList(
+              JsonPath.from("_id"),
               JsonPath.from("name"),
               JsonPath.from("values"),
               JsonPath.from("values.[0]"),
@@ -81,7 +82,7 @@ public class ShredderTest {
       expNums.put(JsonPath.from("values.[1]"), BigDecimal.valueOf(2));
       assertThat(doc.queryNumberValues()).isEqualTo(expNums);
       assertThat(doc.queryTextValues())
-          .isEqualTo(Collections.singletonMap(JsonPath.from("name"), "Bob"));
+          .isEqualTo(Map.of(JsonPath.from("_id"), "abc", JsonPath.from("name"), "Bob"));
       assertThat(doc.queryNullValues()).isEqualTo(Collections.singleton(JsonPath.from("nullable")));
     }
 
@@ -100,7 +101,8 @@ public class ShredderTest {
       assertThat(doc.id()).isInstanceOf(DocumentId.StringId.class);
       // should be auto-generated UUID:
       assertThat(UUID.fromString(doc.id().toString())).isNotNull();
-      List<JsonPath> expPaths = Arrays.asList(JsonPath.from("age"), JsonPath.from("name"));
+      List<JsonPath> expPaths =
+          Arrays.asList(JsonPath.from("_id"), JsonPath.from("age"), JsonPath.from("name"));
 
       assertThat(doc.existKeys()).isEqualTo(new HashSet<>(expPaths));
       assertThat(doc.arraySize()).isEmpty();
@@ -108,11 +110,13 @@ public class ShredderTest {
       assertThat(doc.arrayContains()).isEmpty();
       assertThat(doc.subDocEquals()).hasSize(0);
 
-      // Also, the document should be the same, except for added _id:
+      // Also, the document should be the same, including _id added:
       ObjectNode jsonFromShredded = (ObjectNode) objectMapper.readTree(doc.docJson());
-      JsonNode idNode = jsonFromShredded.remove("_id");
+      JsonNode idNode = jsonFromShredded.get("_id");
       assertThat(idNode).isNotNull();
-      assertThat(idNode.textValue()).isEqualTo(doc.id().toString());
+      String generatedId = idNode.textValue();
+      assertThat(generatedId).isEqualTo(doc.id().toString());
+      ((ObjectNode) inputDoc).put("_id", generatedId);
       assertThat(jsonFromShredded).isEqualTo(inputDoc);
 
       // Then atomic value containers
@@ -120,7 +124,8 @@ public class ShredderTest {
       assertThat(doc.queryNullValues()).isEmpty();
       assertThat(doc.queryNumberValues())
           .isEqualTo(Map.of(JsonPath.from("age"), BigDecimal.valueOf(39)));
-      assertThat(doc.queryTextValues()).isEqualTo(Map.of(JsonPath.from("name"), "Chuck"));
+      assertThat(doc.queryTextValues())
+          .isEqualTo(Map.of(JsonPath.from("_id"), generatedId, JsonPath.from("name"), "Chuck"));
     }
 
     @Test
@@ -137,6 +142,11 @@ public class ShredderTest {
 
       JsonNode jsonFromShredded = objectMapper.readTree(doc.docJson());
       assertThat(jsonFromShredded).isEqualTo(inputDoc);
+
+      assertThat(doc.queryBoolValues()).isEqualTo(Map.of(JsonPath.from("_id"), Boolean.TRUE));
+      assertThat(doc.queryNullValues()).isEmpty();
+      assertThat(doc.queryNumberValues()).isEmpty();
+      assertThat(doc.queryTextValues()).isEqualTo(Map.of(JsonPath.from("name"), "Bob"));
     }
 
     @Test
@@ -153,6 +163,12 @@ public class ShredderTest {
 
       JsonNode jsonFromShredded = objectMapper.readTree(doc.docJson());
       assertThat(jsonFromShredded).isEqualTo(inputDoc);
+
+      assertThat(doc.queryBoolValues()).isEmpty();
+      assertThat(doc.queryNullValues()).isEmpty();
+      assertThat(doc.queryNumberValues())
+          .isEqualTo(Map.of(JsonPath.from("_id"), new BigDecimal(123L)));
+      assertThat(doc.queryTextValues()).isEqualTo(Map.of(JsonPath.from("name"), "Bob"));
     }
   }
 
